Issue #1477798 by pjcdawkins: Add z-index to upload queue message

--- a/static/styles.css
+++ b/static/styles.css
@@ -33,6 +33,7 @@
   bottom: 0;
   right: 0;
   width: 200px;
+  z-index: 999;
 }
 
 #swfupload-queue div {
